package ast.expressions;

public class LogicalNot {
}
