package ast.statements;

import ast.ASTNode;
import ast.Locatable;

public interface Statement extends Locatable {
}
